--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
         </h1>
     </head>
     <body>
+        <p>
         Hello world!
+        </p>
+
+        <p>
+        <em><strong>Amelia</strong></em> is pretty dope
+        </p>
     </body>
 </html>
