All three pages done (HTML)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     
         <div id="nav_bar">
             <ul id="nav">
-                <li><a href="mine.php">Mine</a></li>
-                <li><a href="market.php">Market</a></li>
-                <li><a href="leaderboard.php">Leaderboard</a></li>
+                <li><a href="index.html"><img src="Mine.png"></a></li>
+                <li><a href="market.html"><img src="Market.png"></a></li>
+                <li><a href="leaderboard.html"><img src="Leaderboard.png"></a></li>
             </ul>
             
         </div>
