Changed form html

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             </h1>
 
             <div id="mine_textbox">
-                <form>
-                    <input>
+                <form for="answer">
+                    <input type="text" id="answer" name="answer">
                 </form>
                 <button id="mine_button"> Enter </button>
             </div>
