Account button styling done

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
                 <li><a href="index.html"><img src="Mine.png"></a></li>
                 <li><a href="market.html"><img src="Market.png"></a></li>
                 <li><a href="leaderboard.html"><img src="Leaderboard.png"></a></li>
-                <li class="account"><a href="account.html"><img src="Account.png"></a></li>
             </ul>
-            
+            <a href="account.html"><img src="Account.png"></a>
         </div>
         <hr/>
     </head>
