--- a/leaderboard.html
+++ b/leaderboard.html
@@ -9,7 +9,7 @@
                 <li><a href="market.html"><img src="Market.png"></a></li>
                 <li><a href="leaderboard.html"><img src="Leaderboard.png"></a></li>
             </ul>
-            
+            <a href="account.html"><img src="Account.png"></a>
         </div>
         <hr/>
     </head>
