--- a/market.html
+++ b/market.html
@@ -29,7 +29,7 @@
             <ol>
                 <li>
                     <div class="container">
-                        <a href="monkee.png"><img src="monkee.png">
+                        <a href="purchase.html"><img src="monkee.png">
                             <div class="content">
                                 <h1>Price: $6969</h1>
                             </div>
@@ -39,7 +39,7 @@
                     
                 <li>
                     <div class="container">
-                        <a href="monkee2.png"><img src="monkee2.png">
+                        <a href="purchase.html"><img src="monkee2.png">
                             <div class="content">
                                 <h1>Price: $6969</h1>
                             </div>
@@ -49,7 +49,7 @@
 
                 <li>
                     <div class="container">
-                        <a href="monkee3.png"><img src="monkee3.png">
+                        <a href="purchase.html"><img src="monkee3.png">
                             <div class="content">
                                 <h1>Price: $6969</h1>
                             </div>
@@ -59,7 +59,7 @@
 
                 <li>
                     <div class="container">
-                        <a href="monkee4.png"><img src="monkee4.png">
+                        <a href="purchase.html"><img src="monkee4.png">
                             <div class="content">
                                 <h1>Price: $6969</h1>
                             </div>
