--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
     <head>
         <title>NFT Black Market</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-    
+        <link rel="icon" type="image/x-icon" href="favicon.png">
+        
         <div id="nav_bar">
             <ul id="nav">
                 <li><a href="index.html"><img src="Mine.png"></a></li>
