--- a/market.html
+++ b/market.html
@@ -2,6 +2,7 @@
     <head>
         <title>NFT Black Market</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/x-icon" href="favicon.png">
     
         <div id="nav_bar">
             <ul id="nav">
