--- a/purchase.html
+++ b/purchase.html
@@ -3,6 +3,7 @@
     <head>
         <title>NFT Black Market</title>
         <link rel="stylesheet" type="text/css" href="style.css">
+        <link rel="icon" type="image/x-icon" href="favicon.png">
     
         <div id="nav_bar">
             <ul id="nav">
